<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/length1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/length1"
            android:layout_height="match_parent"
            android:background="@color/pink"
            android:gravity="center"
            android:text="@string/textview1"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white" />


        <TextView
            android:layout_width="@dimen/length1"
            android:layout_height="match_parent"
            android:background="@color/light_green"
            android:gravity="center"
            android:text="@string/textview2"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="@dimen/length1"
            android:layout_height="match_parent"
            android:background="@color/blue"
            android:gravity="center"
            android:text="@string/textview3"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/length1"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:layout_width="@dimen/length2"
            android:layout_height="match_parent"
            android:background="@color/blue"
            android:text="@string/button1"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/image_string"
            android:scaleType="fitCenter"
            android:src="@drawable/paint_image" />

        <Button
            android:layout_width="@dimen/length2"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@color/green"
            android:text="@string/button2"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/length1"
        android:background="@color/yellow"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:autofillHints="@string/edit_text1"
            android:hint="@string/edit_text1"
            android:inputType="text"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            tools:targetApi="o" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/edit_text2"
            android:hint="@string/edit_text2"
            android:inputType="phone"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            tools:targetApi="o" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/checkbox"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="0dp"
                android:text="@string/backup"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black" />

        <RatingBar
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:rating="3"
            android:stepSize="1"
            android:padding="10dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        </RadioGroup>

    </LinearLayout>

</LinearLayout>